--- a/module-1/List-Comprehension/your-code/main.ipynb
+++ b/module-1/List-Comprehension/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,10 +27,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [i for i in range(1,51)]\n",
+    "print(lst)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -41,10 +52,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 4 6 8 10 12 14 16 18 20 22 24 26 28 30 32 34 36 38 40 42 44 46 48 50 52 54 56 58 60 62 64 66 68 70 72 74 76 78 80 82 84 86 88 90 92 94 96 98 100 102 104 106 108 110 112 114 116 118 120 122 124 126 128 130 132 134 136 138 140 142 144 146 148 150 152 154 156 158 160 162 164 166 168 170 172 174 176 178 180 182 184 186 188 190 192 194 196 198 200 "
+     ]
+    }
+   ],
+   "source": [
+    "lst = [i for i in range(2,202) if i >= 2]\n",
+    "for num in lst:\n",
+    "    if num % 2 == 0: \n",
+    "       print(num, end = \" \") "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -55,9 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.84062117, 0.44409793, 0.7066597, 0.29960807, 0.17003563, 0.41290051, 0.71725408, 0.20754036, 0.12149553, 0.80930099], [0.48006452, 0.09014516, 0.09610873, 0.42315023, 0.46843998, 0.19561071, 0.87702738, 0.57871812, 0.53222417, 0.50962849], [0.7876326, 0.81835917, 0.41247947, 0.34452557, 0.92796258, 0.16284783, 0.31244595, 0.07214068, 0.9976855, 0.94555126], [0.77109654, 0.87645456, 0.57433389, 0.4751035, 0.69814654, 0.97016248, 0.76615487, 0.40356048, 0.12536346, 0.33364763]]\n"
+     ]
+    }
+   ],
    "source": [
     "a = [[0.84062117, 0.48006452, 0.7876326 , 0.77109654],\n",
     "       [0.44409793, 0.09014516, 0.81835917, 0.87645456],\n",
@@ -68,15 +100,55 @@
     "       [0.71725408, 0.87702738, 0.31244595, 0.76615487],\n",
     "       [0.20754036, 0.57871812, 0.07214068, 0.40356048],\n",
     "       [0.12149553, 0.53222417, 0.9976855 , 0.12536346],\n",
-    "       [0.80930099, 0.50962849, 0.94555126, 0.33364763]];"
+    "       [0.80930099, 0.50962849, 0.94555126, 0.33364763]];\n",
+    "\n",
+    "lst = []\n",
+    "\n",
+    "\n",
+    "for i in range(len(a[0])):\n",
+    "    lst_row = []\n",
+    "\n",
+    "    for row in a:\n",
+    "        lst_row.append(row[i])\n",
+    "    lst.append(lst_row)\n",
+    "\n",
+    "print(lst)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "int() argument must be a string, a bytes-like object or a number, not 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-40-92a420e7eba5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m        [0.80930099, 0.50962849, 0.94555126, 0.33364763]];\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"Modified list is : \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-40-92a420e7eba5>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     10\u001b[0m        [0.80930099, 0.50962849, 0.94555126, 0.33364763]];\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"Modified list is : \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: int() argument must be a string, a bytes-like object or a number, not 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "a = [[0.84062117, 0.48006452, 0.7876326 , 0.77109654],\n",
+    "       [0.44409793, 0.09014516, 0.81835917, 0.87645456],\n",
+    "       [0.7066597 , 0.09610873, 0.41247947, 0.57433389],\n",
+    "       [0.29960807, 0.42315023, 0.34452557, 0.4751035 ],\n",
+    "       [0.17003563, 0.46843998, 0.92796258, 0.69814654],\n",
+    "       [0.41290051, 0.19561071, 0.16284783, 0.97016248],\n",
+    "       [0.71725408, 0.87702738, 0.31244595, 0.76615487],\n",
+    "       [0.20754036, 0.57871812, 0.07214068, 0.40356048],\n",
+    "       [0.12149553, 0.53222417, 0.9976855 , 0.12536346],\n",
+    "       [0.80930099, 0.50962849, 0.94555126, 0.33364763]];\n",
+    "\n",
+    "a = [int(i) for i in a] \n",
+    "print (\"Modified list is : \" + str(a)) "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,10 +159,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'list' object cannot be interpreted as an integer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-43-881e0dd4ba53>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mlst\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0.84062117\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.44409793\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.7066597\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.29960807\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.17003563\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.41290051\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.71725408\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.20754036\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.12149553\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.80930099\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0.48006452\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.09014516\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.09610873\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.42315023\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.46843998\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.19561071\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.87702738\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.57871812\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.53222417\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.50962849\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0.7876326\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.81835917\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.41247947\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.34452557\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.92796258\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.16284783\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.31244595\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.07214068\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.9976855\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.94555126\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0.77109654\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.87645456\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.57433389\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.4751035\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.69814654\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.97016248\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.76615487\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.40356048\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.12536346\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.33364763\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mlst_new\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlst\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlst_new\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'list' object cannot be interpreted as an integer"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [[0.84062117, 0.44409793, 0.7066597, 0.29960807, 0.17003563, 0.41290051, 0.71725408, 0.20754036, 0.12149553, 0.80930099], [0.48006452, 0.09014516, 0.09610873, 0.42315023, 0.46843998, 0.19561071, 0.87702738, 0.57871812, 0.53222417, 0.50962849], [0.7876326, 0.81835917, 0.41247947, 0.34452557, 0.92796258, 0.16284783, 0.31244595, 0.07214068, 0.9976855, 0.94555126], [0.77109654, 0.87645456, 0.57433389, 0.4751035, 0.69814654, 0.97016248, 0.76615487, 0.40356048, 0.12536346, 0.33364763]]\n",
+    "\n",
+    "lst_new = [ x for x in range(lst) if x >= 0.5]\n",
+    "print(lst_new)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'list' object cannot be interpreted as an integer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-59-375ed4724074>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlst\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlst\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'list' object cannot be interpreted as an integer"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [i for i in range(lst) if i >= 0.5]\n",
+    "print(lst)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,9 +212,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.55867166, 0.06210792, 0.08147297], [0.82579068, 0.91512478, 0.06833034], [0.05440634, 0.65857693, 0.30296619], [0.06769833, 0.96031863, 0.51293743], [0.09143215, 0.71893382, 0.45850679], [0.58256464, 0.59005654, 0.56266457], [0.71600294, 0.87392666, 0.11434044], [0.8694668, 0.65669313, 0.10708681], [0.07529684, 0.46470767, 0.47984544], [0.65368638, 0.14901286, 0.23760688]]\n",
+      "[[0.55867166, 0.06210792, 0.08147297], [0.82579068, 0.91512478, 0.06833034], [0.05440634, 0.65857693, 0.30296619], [0.06769833, 0.96031863, 0.51293743], [0.09143215, 0.71893382, 0.45850679], [0.58256464, 0.59005654, 0.56266457], [0.71600294, 0.87392666, 0.11434044], [0.8694668, 0.65669313, 0.10708681], [0.07529684, 0.46470767, 0.47984544], [0.65368638, 0.14901286, 0.23760688]]\n"
+     ]
+    }
+   ],
    "source": [
     "b = [[[0.55867166, 0.06210792, 0.08147297],\n",
     "        [0.82579068, 0.91512478, 0.06833034]],\n",
@@ -118,15 +238,30 @@
     "        [0.8694668 , 0.65669313, 0.10708681]],\n",
     "\n",
     "       [[0.07529684, 0.46470767, 0.47984544],\n",
-    "        [0.65368638, 0.14901286, 0.23760688]]];"
+    "        [0.65368638, 0.14901286, 0.23760688]]];\n",
+    "\n",
+    "\n",
+    "lst_new = []\n",
+    "\n",
+    "\n",
+    "# done in a long format-\n",
+    "# for i in range(len(b[0])):\n",
+    "# don't have to describe range with 0\n",
+    "\n",
+    "for i in b:\n",
+    "#     lst_row = []\n",
+    "    for row in i:\n",
+    "        lst_new.append(row)\n",
+    "#     lst.append(lst_row)\n",
+    "\n",
+    "print(lst_new)\n",
+    "\n",
+    "\n",
+    "# or in a shorthand way-\n",
+    "\n",
+    "lst_new_2 = [row for i in b for row in i]\n",
+    "print(lst_new_2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -137,10 +272,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.08147297\n",
+      "0.06833034\n",
+      "0.30296619\n",
+      "0.45850679\n",
+      "0.11434044\n",
+      "0.10708681\n",
+      "0.47984544\n",
+      "0.23760688\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = [[[0.55867166, 0.06210792, 0.08147297],\n",
+    "        [0.82579068, 0.91512478, 0.06833034]],\n",
+    "\n",
+    "       [[0.05440634, 0.65857693, 0.30296619],\n",
+    "        [0.06769833, 0.96031863, 0.51293743]],\n",
+    "\n",
+    "       [[0.09143215, 0.71893382, 0.45850679],\n",
+    "        [0.58256464, 0.59005654, 0.56266457]],\n",
+    "\n",
+    "       [[0.71600294, 0.87392666, 0.11434044],\n",
+    "        [0.8694668 , 0.65669313, 0.10708681]],\n",
+    "\n",
+    "       [[0.07529684, 0.46470767, 0.47984544],\n",
+    "        [0.65368638, 0.14901286, 0.23760688]]];\n",
+    "\n",
+    "for x in b:\n",
+    "    for y in x:\n",
+    "        if y[-1] <= .5:\n",
+    "            print(y[-1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -151,10 +321,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: './data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-75-1cc4c5c1bdb4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mfile_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./data'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mdata_sets\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./data'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfile_list\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_sets\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './data'"
+     ]
+    }
+   ],
+   "source": [
+    "import csv \n",
+    "\n",
+    "import os\n",
+    "\n",
+    "\n",
+    "file_list = [x for x in os.listdir('./data') if x.endswith('.csv')]\n",
+    "data_sets = [pd.read_csv(os.path.join('./data', x)) for x in file_list]\n",
+    "data = pd.concat(data_sets, axis=0)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -207,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
